お気に入り画面からリスト画面に戻れるように

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="close">閉じる</string>
     <string name="menu">メニュー</string>
     <string name="favorite">お気に入り</string>
+    <string name="music_list">楽曲リスト</string>
 </resources>
